--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TodoMVC</title>
+    <link rel="stylesheet" href="node_modules/todomvc-common/base.css">
+    <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
   </head>
   <body>
-    <div id="app">
-    </div>
+    <section class="todoapp">
+      <div id="app"></div>
+    </section>
     <script src="build/index.js"></script>
   </body>
 </html>
