--- a/ng1/index.html
+++ b/ng1/index.html
@@ -54,19 +54,15 @@
       </section>
       <footer id="info">
         <p>Double-click to edit a todo</p>
-        <p>Credits:
-          <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>,
-          <a href="http://ericbidelman.com">Eric Bidelman</a>,
-          <a href="http://jacobmumm.com">Jacob Mumm</a> and
-          <a href="http://blog.igorminar.com">Igor Minar</a>
-        </p>
-        <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
       </footer>
     </script>
     <!-- <script src="node_modules/todomvc-common/base.js"></script> -->
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-route/angular-route.js"></script>
     <script src="node_modules/angular-resource/angular-resource.js"></script>
+    <script src="node_modules/keymirror/index.js"></script>
+    <script src="node_modules/rx/dist/rx.all.js"></script>
+    <script src="js/appState/appState.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers/todoCtrl.js"></script>
     <script src="js/services/todoStorage.js"></script>
