--- a/ng1/index.html
+++ b/ng1/index.html
@@ -7,56 +7,8 @@
     <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
     <style>[ng-cloak] { display: none; }</style>
   </head>
-  <body ng-app="todomvc">
+  <body ng-app="todomvc" ng-model="todos">
     <ng-view />
-
-    <script type="text/ng-template" id="todomvc-index.html">
-      <section id="todoapp">
-        <header id="header">
-          <h1>todos</h1>
-          <form id="todo-form" ng-submit="addTodo()">
-            <input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" ng-disabled="saving" autofocus>
-          </form>
-        </header>
-        <section id="main" ng-show="todos.length" ng-cloak>
-          <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
-          <label for="toggle-all">Mark all as complete</label>
-          <ul id="todo-list">
-            <li ng-repeat="todo in todos | filter:statusFilter track by $index" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
-              <label>{{todo.text}}</label>
-              <div class="view">
-                <input class="toggle" type="checkbox" ng-model="todo.completed" ng-change="toggleCompleted(todo)">
-                <label ng-dblclick="editTodo(todo)">{{todo.text}}</label>
-                <button class="destroy" ng-click="removeTodo(todo)"></button>
-              </div>
-              <form ng-submit="saveEdits(todo, 'submit')">
-                <input class="edit" ng-trim="false" ng-model="todo.text" todo-escape="revertEdits(todo)" ng-blur="saveEdits(todo, 'blur')" todo-focus="todo == editedTodo">
-              </form>
-            </li>
-          </ul>
-        </section>
-        <footer id="footer" ng-show="todos.length" ng-cloak>
-          <span id="todo-count"><strong>{{remainingCount}}</strong>
-            <ng-pluralize count="remainingCount" when="{ one: 'item left', other: 'items left' }"></ng-pluralize>
-          </span>
-          <ul id="filters">
-            <li>
-              <a ng-class="{selected: status == ''} " href="#/">All</a>
-            </li>
-            <li>
-              <a ng-class="{selected: status == 'active'}" href="#/active">Active</a>
-            </li>
-            <li>
-              <a ng-class="{selected: status == 'completed'}" href="#/completed">Completed</a>
-            </li>
-          </ul>
-          <button id="clear-completed" ng-click="clearCompletedTodos()" ng-show="completedCount">Clear completed</button>
-        </footer>
-      </section>
-      <footer id="info">
-        <p>Double-click to edit a todo</p>
-      </footer>
-    </script>
     <!-- <script src="node_modules/todomvc-common/base.js"></script> -->
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-route/angular-route.js"></script>
