--- a/ng1/todomvc-index.html
+++ b/ng1/todomvc-index.html
@@ -41,11 +41,12 @@
 </section>
 <footer id="info">
 <p>Double-click to edit a todo</p>
-<p>Credits:
+<!-- <p>Credits:
   <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>,
   <a href="http://ericbidelman.com">Eric Bidelman</a>,
   <a href="http://jacobmumm.com">Jacob Mumm</a> and
   <a href="http://blog.igorminar.com">Igor Minar</a>
 </p>
-<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+ -->
+ <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
