--- a/ng1/todomvc-index.html
+++ b/ng1/todomvc-index.html
@@ -11,7 +11,7 @@
   <ul id="todo-list">
     <li ng-repeat="todo in todos | filter:statusFilter track by $index" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
       <div class="view">
-        <input class="toggle" type="checkbox" ng-model="todo.completed" ng-change="toggleCompleted(todo)">
+        <input class="toggle" type="checkbox" ng-model="todo.completed" ng-click="toggleCompleted(todo)">
         <label ng-dblclick="editTodo(todo)">{{todo.text}}</label>
         <button class="destroy" ng-click="removeTodo(todo)"></button>
       </div>
