--- a/ng2-js-quickstart/index.html
+++ b/ng2-js-quickstart/index.html
@@ -2,8 +2,9 @@
   <head>
     <title>Angular 2 QuickStart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="node_modules/todomvc-common/base.css">
+    <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
     <!-- 1. Load libraries -->
     <!-- IE required polyfill -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
@@ -12,8 +13,10 @@
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.umd.js"></script>
     <script src="node_modules/angular2/bundles/angular2-all.umd.js"></script>
+    <script src="node_modules/keymirror/index.js"></script>
 
     <!-- 2. Load our 'modules' -->
+    <script src='app/appState.js'></script>
     <script src='app/app.component.js'></script>
     <script src='app/main.js'></script>
 
@@ -21,7 +24,7 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <todo-app></todo-app>
   </body>
 
 </html>
