--- a/ng2-ts-quickstart/index.html
+++ b/ng2-ts-quickstart/index.html
@@ -25,7 +25,7 @@
           }
         }
       });
-      System.import('app/main')
+      System.import('src')
             .then(null, console.error.bind(console));
     </script>
   </head>
